[gd_scene load_steps=22 format=3 uid="uid://bdbus44x0af6b"]

[ext_resource type="Script" path="res://Towers/Elec/elec_tower.gd" id="1_s2r2s"]
[ext_resource type="Texture2D" uid="uid://yhvu7npq6y3e" path="res://Assets/Sprites/Towers/ElectTower.png" id="2_6gewy"]
[ext_resource type="Script" path="res://Towers/Wind/TowerRangePreview.gd" id="3_8i52g"]
[ext_resource type="FontFile" uid="uid://cgdbdkkr85xtx" path="res://Assets/Ui/Fonts/kenvector_future_thin.ttf" id="4_synvx"]
[ext_resource type="Texture2D" uid="uid://bh8lxb1pyhkc1" path="res://Assets/Ui/Art/bin.png" id="5_b43kp"]
[ext_resource type="Script" path="res://Singletons/AttackTBar.gd" id="6_g372j"]
[ext_resource type="Script" path="res://Mobs/Adds/HealthBar.gd" id="7_ldik5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2unwm"]
resource_local_to_scene = true
radius = 150.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dbufd"]
bg_color = Color(0.986525, 0.338473, 0.510245, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xkbed"]
bg_color = Color(0.72453, 0.356289, 0.930381, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ro21e"]
size = Vector2(5.93971, 5.57547)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j8710"]
size = Vector2(56, 23.0769)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nci8i"]
bg_color = Color(0.379944, 0.659671, 0.624937, 0.45098)
border_width_left = 1
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color(0, 0.745098, 0.627451, 0.827451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_334qq"]
bg_color = Color(0.243137, 0.470588, 0.694118, 0.537255)
border_width_left = 1
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color(0.819608, 0.360784, 0.0823529, 0.8)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xy6tr"]
bg_color = Color(0.745098, 0.133333, 0.0980392, 0.827451)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
border_color = Color(0.596936, 0.0421845, 0.0425374, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqvr"]
bg_color = Color(0.92756, 0.204587, 0.156606, 0.827451)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
border_color = Color(0.596078, 0.0431373, 0.0431373, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_monho"]
bg_color = Color(0.544719, 0.0832642, 0.0573227, 0.827451)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
border_color = Color(0.596078, 0.0431373, 0.0431373, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2niu2"]
bg_color = Color(0.0285469, 0.250721, 0.47662, 0.580392)
border_width_top = 1
border_width_bottom = 1
border_color = Color(0.0363896, 0.430395, 0.597016, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2n770"]
bg_color = Color(0.390165, 0.701667, 0.991515, 0.894118)
border_width_top = 1
border_width_bottom = 1
border_color = Color(0.0352941, 0.431373, 0.596078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vlpxs"]
bg_color = Color(0.772549, 0.105882, 0.247059, 0.780392)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_irjqq"]
bg_color = Color(0.283263, 0.884305, 0, 1)

[node name="ElecTower" type="StaticBody2D"]
light_mask = 2
visibility_layer = 3
collision_layer = 2
collision_mask = 2
input_pickable = true
script = ExtResource("1_s2r2s")
SDamage = 3

[node name="baseTowerSprite" type="Sprite2D" parent="."]
light_mask = 2
visibility_layer = 2
rotation = 1.5708
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_6gewy")

[node name="Tower" type="Area2D" parent="."]
collision_layer = 0

[node name="Collision" type="CollisionShape2D" parent="Tower"]
shape = SubResource("CircleShape2D_2unwm")

[node name="Area" type="Panel" parent="Tower"]
modulate = Color(0.72549, 0, 0, 0.490196)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(150, 150)
theme_override_styles/panel = SubResource("StyleBoxFlat_dbufd")
script = ExtResource("3_8i52g")

[node name="AreaUpgraded" type="Panel" parent="Tower"]
visible = false
modulate = Color(0.516072, 0.169633, 0.728865, 0.521569)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
pivot_offset = Vector2(149.924, 149.953)
theme_override_styles/panel = SubResource("StyleBoxFlat_xkbed")
script = ExtResource("3_8i52g")

[node name="TowerDetection" type="Area2D" parent="."]
process_mode = 3
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerDetection"]
position = Vector2(-0.249997, -1.43051e-06)
scale = Vector2(13.3009, -12.9137)
shape = SubResource("RectangleShape2D_ro21e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 2.08)
shape = SubResource("RectangleShape2D_j8710")

[node name="UpgradeNode" type="Node" parent="."]

[node name="Panel" type="Panel" parent="UpgradeNode"]
visible = false
offset_left = 8.0
offset_top = 99.0
offset_right = 48.0
offset_bottom = 139.0
scale = Vector2(5, -3.524)
pivot_offset = Vector2(26.7416, 22.852)
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_nci8i")

[node name="HBox" type="HBoxContainer" parent="UpgradeNode/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.625
offset_top = -13.2263
offset_right = 24.375
offset_bottom = 26.7737
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.790851, 0.406084)
pivot_offset = Vector2(21.8789, 20.3065)

[node name="Upgrade1" type="Button" parent="UpgradeNode/Panel/HBox"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_334qq")

[node name="Sprite2D" type="Sprite2D" parent="UpgradeNode/Panel/HBox/Upgrade1"]
position = Vector2(6.61813, 20.2582)

[node name="p" type="Label" parent="UpgradeNode/Panel/HBox/Upgrade1"]
layout_mode = 0
offset_left = 4.58715
offset_top = 9.80733
offset_right = 22.5871
offset_bottom = 27.8073
scale = Vector2(0.185449, -0.556406)
theme_override_fonts/font = ExtResource("4_synvx")
theme_override_font_sizes/font_size = 15
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Upgrade2" type="Button" parent="UpgradeNode/Panel/HBox"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_334qq")

[node name="Sprite2D" type="Sprite2D" parent="UpgradeNode/Panel/HBox/Upgrade2"]
position = Vector2(6.55356, 20.0094)

[node name="p" type="Label" parent="UpgradeNode/Panel/HBox/Upgrade2"]
layout_mode = 0
offset_left = 4.52257
offset_top = 9.55852
offset_right = 22.5226
offset_bottom = 27.5585
scale = Vector2(0.185449, -0.556406)
theme_override_fonts/font = ExtResource("4_synvx")
theme_override_font_sizes/font_size = 15
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Upgrade3" type="Button" parent="UpgradeNode/Panel/HBox"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_334qq")

[node name="Sprite2D" type="Sprite2D" parent="UpgradeNode/Panel/HBox/Upgrade3"]
position = Vector2(6.55356, 20.0094)

[node name="p" type="Label" parent="UpgradeNode/Panel/HBox/Upgrade3"]
layout_mode = 0
offset_left = 5.0048
offset_top = 11.0515
offset_right = 23.0048
offset_bottom = 29.0515
scale = Vector2(0.192332, -0.571021)
theme_override_fonts/font = ExtResource("4_synvx")
theme_override_font_sizes/font_size = 15
text = "15
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Special" type="HBoxContainer" parent="UpgradeNode/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -30.0
offset_right = 4.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.790851, 0.406084)
pivot_offset = Vector2(21.8789, 20.3065)

[node name="Scrap" type="Button" parent="UpgradeNode/Panel/Special"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_xy6tr")
theme_override_styles/hover = SubResource("StyleBoxFlat_bqqvr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_monho")

[node name="Sprite2D" type="Sprite2D" parent="UpgradeNode/Panel/Special/Scrap"]
position = Vector2(5.98584, 21.5685)
rotation = 3.14159
scale = Vector2(0.0139649, 0.0460245)
texture = ExtResource("5_b43kp")

[node name="p" type="Label" parent="UpgradeNode/Panel/Special/Scrap"]
layout_mode = 0
offset_left = 4.58715
offset_top = 9.80733
offset_right = 22.5871
offset_bottom = 27.8073
scale = Vector2(0.185449, -0.556406)
theme_override_colors/font_color = Color(0.740092, 0.81577, 0.9412, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_synvx")
theme_override_font_sizes/font_size = 15
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerNode" type="Node" parent="."]

[node name="AttackTimer" type="ProgressBar" parent="TimerNode"]
visible = false
offset_left = -25.0
offset_top = 30.0
offset_right = 25.0
offset_bottom = 35.0
pivot_offset = Vector2(26, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_2niu2")
theme_override_styles/fill = SubResource("StyleBoxFlat_2n770")
value = 50.0
show_percentage = false
script = ExtResource("6_g372j")

[node name="Timer" type="Timer" parent="TimerNode/AttackTimer"]

[node name="AttackPeriod" type="Timer" parent="TimerNode"]
wait_time = 0.2
one_shot = true

[node name="regenTimer" type="Timer" parent="TimerNode"]
autostart = true

[node name="HealthComponent" type="Node" parent="."]

[node name="healthBar" type="ProgressBar" parent="HealthComponent"]
offset_left = -24.0
offset_top = -17.0
offset_right = 26.0
offset_bottom = -13.0
pivot_offset = Vector2(26, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_vlpxs")
theme_override_styles/fill = SubResource("StyleBoxFlat_irjqq")
value = 100.0
show_percentage = false
script = ExtResource("7_ldik5")

[connection signal="input_event" from="." to="." method="_click_tower"]
[connection signal="body_entered" from="Tower" to="." method="_on_tower_body_entered"]
[connection signal="pressed" from="UpgradeNode/Panel/HBox/Upgrade1" to="." method="_on_upgrade_1_pressed" binds= ["\"UpgradeNode/Panel/HBox/Upgrade1/p\""]]
[connection signal="mouse_entered" from="UpgradeNode/Panel/HBox/Upgrade2" to="." method="_on_upgrade_2_mouse_entered"]
[connection signal="mouse_exited" from="UpgradeNode/Panel/HBox/Upgrade2" to="." method="_on_upgrade_2_mouse_exited"]
[connection signal="pressed" from="UpgradeNode/Panel/HBox/Upgrade2" to="." method="_on_upgrade_2_pressed" binds= ["\"UpgradeNode/Panel/HBox/Upgrade2/p\""]]
[connection signal="pressed" from="UpgradeNode/Panel/HBox/Upgrade3" to="." method="_on_upgrade_3_pressed" binds= ["\"UpgradeNode/Panel/HBox/Upgrade3/p\""]]
[connection signal="pressed" from="UpgradeNode/Panel/Special/Scrap" to="." method="scrap"]
[connection signal="timeout" from="TimerNode/AttackTimer/Timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="TimerNode/AttackPeriod" to="." method="_attack_anim_timeout"]
[connection signal="timeout" from="TimerNode/regenTimer" to="." method="_on_regen_timer_timeout"]
